--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,108 @@
-{% extends 'base.html' %}
+{% extends 'base.html' %} {% block title %}
+<title>Home - Memorivise</title>
+{% endblock %} {% block body %}
+<nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="../templates/index.html">Memorivise</a>
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-bs-toggle="collapse"
+      data-bs-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <!-- <div class="collapse navbar-collapse" id="navbarSupportedContent"> -->
 
-{% block title %} 
-<title>Home - Memorivise </title>
+    <form class="d-flex" role="search">
+      <input
+        class="form-control me-2"
+        type="search"
+        placeholder="Search"
+        aria-label="Search"
+      />
+      <button class="btn btn-outline-success" type="submit">Search</button>
+    </form>
+    <!-- </div> -->
+  </div>
+</nav>
+<div class="container">
+  <form class="mt-5" method="POST" action="/">
+    <div class="mb-3">
+      <label for="title" class="form-label">Title</label>
+      <input
+        type="text"
+        class="form-control"
+        name="title"
+        id="title"
+        aria-describedby="emailHelp"
+      />
+    </div>
+    <div class="mb-3">
+      <label for="decsription" class="form-label">Description</label>
+      <textarea class="form-control" name="description" id="description" rows="3"></textarea>
+    </div>
+    <button type="submit" id="submit" class="btn btn-primary">Submit</button>
+  </form>
+
+  <div class="revive-card-container my-5 container">
+    <h3>Revise Cards</h3>
+    <div class="revise-cards mt-3">
+      <div class="row card-row d-flex">
+        {% for revision in revisions %}
+        <div class="card ms-4 mb-4 col-lg-3">
+          <div class="card-body">
+            <h5 class="card-title">{{ revision.title }}</h5>
+            <p class="card-text">
+              {{ revision.description }}
+            </p>
+            <a href="#" class="card-link">Revise</a>
+            <a href="#" class="card-link">Update</a>
+            <a href="/delete/{{revision.id}}" class="card-link">Delete</a>
+          </div>
+        </div>
+        {% endfor %}
+        <!-- <div class="card ms-4 mb-4 col-lg-3">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+            <a href="#" class="card-link">Revise</a>
+            <a href="#" class="card-link">Update</a>
+            <a href="#" class="card-link">Delete</a>
+          </div>
+        </div>
+        <div class="card ms-4 mb-4 col-lg-3">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+            <a href="#" class="card-link">Revise</a>
+            <a href="#" class="card-link">Update</a>
+            <a href="#" class="card-link">Delete</a>
+          </div>
+        </div>
+        <div class="card ms-4 mb-4 col-lg-3">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+            <a href="#" class="card-link">Revise</a>
+            <a href="#" class="card-link">Update</a>
+            <a href="#" class="card-link">Delete</a>
+          </div>
+        </div> -->
+      </div>
+    </div>
+  </div>
+</div>
 {% endblock %}
-
-
-{% block body %} 
-<h1> this is the home page of Memorivise </h1>
-{% endblock %} 
-
