--- a/templates/login.html
+++ b/templates/login.html
@@ -8,17 +8,17 @@
 {% block body %} 
 <h1> Welcome to Memorivise </h1>
 <form action="/login" method="post">
-    <label for="username">Username:</label>
-    <input type="text" id="username" name="username">
+    <label class="form-label" for="username">Username:</label>
+    <input class="form-control" type="text" id="username" name="username">
     <br>
-    <label for="password">Password:</label>
-    <input type="password" id="password" name="password">
+    <label class="form-label" for="password">Password:</label>
+    <input class="form-control" type="password" id="password" name="password">
     <br>
     <br>
-    <a href="/forgot-password">Forgot Password?</a>
+    <a href="">Forgot Password?</a>
     <br><br>
-    <input type="submit" value="Login">
-    <input type="submit" value="SignUp">
+    <input class="form-control" type="submit" value="Login">
+    <input class="form-control" type="submit" value="SignUp">
   </form> 
   
 {% endblock %} 
