--- a/templates/index.html
+++ b/templates/index.html
@@ -1,77 +1,21 @@
-{% extends 'base.html' %} {% block title %}
-<title>Home - Memorivise</title>
-{% endblock %} {% block body %}
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="../templates/index.html">Memorivise</a>
-    <button
-      class="navbar-toggler"
-      type="button"
-      data-bs-toggle="collapse"
-      data-bs-target="#navbarSupportedContent"
-      aria-controls="navbarSupportedContent"
-      aria-expanded="false"
-      aria-label="Toggle navigation"
-    >
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <!-- <div class="collapse navbar-collapse" id="navbarSupportedContent"> -->
+{% extends 'base.html' %}
 
-    <form class="d-flex" role="search">
-      <input
-        class="form-control me-2"
-        type="search"
-        placeholder="Search"
-        aria-label="Search"
-      />
-      <button class="btn btn-outline-success" type="submit">Search</button>
-    </form>
-    <!-- </div> -->
-  </div>
-</nav>
+{% block title%}
+<title>Memorivise - Home</title>
+{% endblock title%}
+
+
+{% block body%}
+
 <div class="container">
-  <form class="mt-5" method="POST" action="/">
-    <div class="mb-3">
-      <label for="title" class="form-label">Title</label>
-      <input
-        type="text"
-        class="form-control"
-        name="title"
-        id="title"
-        aria-describedby="emailHelp"
-      />
-    </div>
-    <div class="mb-3">
-      <label for="decsription" class="form-label">Description</label>
-      <textarea class="form-control" name="description" id="description" rows="3"></textarea>
-    </div>
-    <button type="submit" id="submit" class="btn btn-primary">Submit</button>
-  </form>
+    <div class="row">
+        <div class="col-lg-6 d-flex flex-column justify-content-center my-5 bg-primary">
+            <h1>Memorivise</h1>
+            <p>A new way for you to keep track of, and revise your learnings</p>
 
-  <div class="revive-card-container my-5 container">
-    <h3>Revise Cards</h3>
-    <div class="revise-cards mt-3">
-      <div class="row card-row d-flex">
-
-        {% if revisions|length < 1 %}
-        <h6 class="lead"> there are no saved cards available.</h6>
-        {% else%}
-        {% for revision in revisions %}
-        <div class="card me-2 mb-4 col-lg-4">
-          <div class="card-body">
-            <h5 class="card-title">{{ revision.title }}</h5>
-            <p class="card-text card-desc">
-                {{ revision.description }}
-            </p>
-            <a href="#" class="card-link">Revise</a>
-            <a href="/update/{{revision.id}}" class="card-link">Update</a>
-            <a href="/delete/{{revision.id}}" class="card-link">Delete</a>
-          </div>
         </div>
-        {% endfor %}
-        {% endif %}
-      </div>
+        <div class="col-lg-6"></div>
     </div>
-  </div>
 </div>
-{% endblock %}
+
+{% endblock body%}
