--- a/templates/login.html
+++ b/templates/login.html
@@ -2,22 +2,28 @@
 <title>Login - Memorivise</title>
 {% endblock %} {% block body %}
 <div class="container">
-  <h1 class="text-center">Welcome to Memorivise</h1>
-
-  <form class="my-3 col-lg-6 mx-auto bg-primary px-4" action="/login" method="post">
-    <div class="">
+  <form
+    class="my-3 col-lg-5 mx-auto py-4 px-4"
+    action="/login"
+    method="post"
+    id="login-form"
+  >
+    <h4 class="text-center">Welcome to Memorivise</h4>
+    <hr />
+    <div class="mb-3">
       <label for="email" class="form-label">Email</label>
       <input
         type="email"
         class="form-control"
         name="email"
         id="email"
+        autocomplete="off"
         placeholder="example@gmail.com"
         aria-describedby="emailHelp"
       />
-      <div id="emailHelp" class="form-text">
+      <!-- <div id="emailHelp" class="form-text">
         We'll never share your email with anyone else.
-      </div>
+      </div> -->
     </div>
     <div class="mb-3">
       <label for="password" class="form-label">Password</label>
@@ -27,19 +33,24 @@
         name="password"
         id="password"
       />
+      <div class="forgot-password width-auto text-end col-12 ms-auto">
+        <a class="fs-6 fw-thin" href="">Forgot Password?</a>
+      </div>
     </div>
 
-    <div class="forgot-password col-12 ms-auto">
-      <a href="">Forgot Password?</a>
-    </div>
-    <input class="form-control" type="submit" value="Login" />
+    <input class="form-control btn-outline-success" type="submit" value="Login" />
 
-    <div class="seperator text-center my-3">
+    <div class="seperator fs-6 text-muted text-center my-3">
       <span class="bg-secondary"></span>
-      OR
+      Or Continue with
       <span class="bg-secondary"></span>
     </div>
-    <input class="form-control" type="submit" value="SignUp" />
+
+    <div class="social-signup">
+      <input class="form-control mb-2" type="button" value="Google" />
+      <input class="form-control mb-2" type="button" value="Facebook" />
+      <input class="form-control mb-2" type="submit" value="SignUp" />
+    </div>
   </form>
 </div>
 {% endblock %}
