--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
   <body>
     <nav class="navbar navbar-expand-lg px-5 py-4">
       <div class="container-fluid d-flex justify-content-between">
-        <a class="navbar-brand mx-3 fs-2" href="../templates/index.html">
+        <a class="navbar-brand mx-3 fs-2" href="/">
           Memorivise
         </a>
         <button
@@ -34,7 +34,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
             <li class="nav-item me-3">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link active" aria-current="page" href="/">Home</a>
             </li>
             <li class="nav-item me-3 dropdown">
               <a
@@ -47,7 +47,7 @@
                 Services
               </a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Revise</a></li>
+                <li><a class="dropdown-item" href="/revise">Revise</a></li>
                 <li><a class="dropdown-item" href="#">Doubts</a></li>
                 <li><hr class="dropdown-divider" /></li>
                 <li>
@@ -56,7 +56,7 @@
               </ul>
             </li>
             <li class="nav-item me-3">
-              <a class="nav-link" href="#">Contact</a>
+              <a class="nav-link" href="/contact">Contact</a>
             </li>
           </ul>
           <div class="search-icon" id="search-icon">
