--- a/templates/base.html
+++ b/templates/base.html
@@ -103,5 +103,5 @@
     integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
     crossorigin="anonymous"
   ></script>
-  <script src="../static/js/script.js"></script>
+  <script src="{{ url_for('static', filename = '/js/script.js')}}"></script>
 </html>
