--- a/templates/login.html
+++ b/templates/login.html
@@ -47,9 +47,9 @@
     </div>
 
     <div class="social-signup">
-      <input class="form-control mb-2" type="button" value="Google" />
-      <input class="form-control mb-2" type="button" value="Facebook" />
-      <input class="form-control mb-2" type="submit" value="SignUp" />
+      <a class="form-control mb-2 text-center" type="button" href="">Google</a>
+      <a class="form-control mb-2 text-center" type="button" href="">Facebook</a>
+      <a type="button" class="form-control mb-2 text-center" href="/signup">Sign Up</a>
     </div>
   </form>
 </div>
