--- a/templates/login.html
+++ b/templates/login.html
@@ -5,10 +5,10 @@
   <form
     class="my-3 col-lg-5 mx-auto py-4 px-4"
     action="/login"
-    method="post"
+    method="POST"
     id="login-form"
   >
-    <h4 class="text-center">Welcome to Memorivise</h4>
+    <h4 class="text-center">Welcome Back!</h4>
     <hr />
     <div class="mb-3">
       <label for="email" class="form-label">Email</label>
@@ -38,7 +38,7 @@
       </div>
     </div>
 
-    <input class="form-control btn-outline-success" type="submit" value="Login" />
+    <input class="form-control bg-secondary text-light btn-outline-success" type="submit" value="Login" />
 
     <div class="seperator fs-6 text-muted text-center my-3">
       <span class="bg-secondary"></span>
@@ -49,7 +49,7 @@
     <div class="social-signup">
       <a class="form-control mb-2 text-center" type="button" href="">Google</a>
       <a class="form-control mb-2 text-center" type="button" href="">Facebook</a>
-      <a type="button" class="form-control mb-2 text-center" href="/signup">Sign Up</a>
+      <div class="text-center mt-4 mb-0"><span>New to Memorivise? </span><a class="" href="/signup">Sign Up</a></div>
     </div>
   </form>
 </div>
