--- a/memorivise/templates/base.html
+++ b/memorivise/templates/base.html
@@ -17,9 +17,7 @@
   <body>
     <nav class="navbar navbar-expand-lg px-5 py-4">
       <div class="container-fluid d-flex justify-content-between">
-        <a class="navbar-brand mx-3 fs-2" href="/">
-          Memorivise
-        </a>
+        <a class="navbar-brand mx-3 fs-2" href="/"> Memorivise </a>
         <button
           class="navbar-toggler"
           type="button"
@@ -96,7 +94,26 @@
         </div>
       </div>
     </nav>
-    {% block body %} {% endblock %}
+    {% with messages = get_flashed_messages(with_categories=true) %} 
+    {% if messages %}
+    {% for category, message in messages %} 
+    {% if category == 'error' %}
+    <div class="alert alert-danger alter-dismissable fade show" role="alert">
+      {{ message }}
+      <button type="button" class="close" data-dismiss="alert">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+    {% else %}
+    <div class="alert alert-success alter-dismissable fade show" role="alert">
+      {{ message }}
+      <button type="button" class="close" data-dismiss="alert">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+    {% endif %} {% endfor %} {% endif %} {% endwith %} 
+    {% block body %} {%
+    endblock %}
   </body>
   <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
