--- a/memorivise/templates/base.html
+++ b/memorivise/templates/base.html
@@ -15,6 +15,7 @@
     {% block title %} {% endblock %}
   </head>
   <body>
+    <header>
     <nav class="navbar navbar-expand-lg px-5 py-4">
       <div class="container-fluid d-flex justify-content-between">
         <a class="navbar-brand mx-3 fs-2" href="/"> Memorivise </a>
@@ -98,20 +99,22 @@
     {% if messages %}
     {% for category, message in messages %} 
     {% if category == 'error' %}
-    <div class="alert alert-danger alter-dismissable fade show" role="alert">
+    <div class="alert alert-danger alert-dismissible fade show" role="alert">
       {{ message }}
-      <button type="button" class="close" data-dismiss="alert">
-        <span aria-hidden="true">&times;</span>
-      </button>
+      <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
     </div>
     {% else %}
-    <div class="alert alert-success alter-dismissable fade show" role="alert">
+    <div class="alert alert-success alert-dismissible fade show" role="alert">
       {{ message }}
-      <button type="button" class="close" data-dismiss="alert">
-        <span aria-hidden="true">&times;</span>
-      </button>
+      <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
     </div>
-    {% endif %} {% endfor %} {% endif %} {% endwith %} 
+    </div>
+    {% endif %} 
+    {% endfor %}
+     {% endif %} 
+     {% endwith %} 
+  </header>
     {% block body %} {%
     endblock %}
   </body>
