--- a/memorivise/templates/base.html
+++ b/memorivise/templates/base.html
@@ -48,10 +48,15 @@
               </a>
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="/revise">Revise</a></li>
+                <li><hr class="dropdown-divider" /></li>
                 <li><a class="dropdown-item" href="#">Doubts</a></li>
                 <li><hr class="dropdown-divider" /></li>
                 <li>
-                  <a class="dropdown-item" href="#">Flash Cards</a>
+                  <a class="dropdown-item" href="/memorivise/">Memorivise</a>
+                </li>
+                <li><hr class="dropdown-divider" /></li>
+                <li>
+                  <a class="dropdown-item" href="/resources">Resources</a>
                 </li>
               </ul>
             </li>
