--- a/memorivise/templates/contact.html
+++ b/memorivise/templates/contact.html
@@ -5,12 +5,11 @@
   <div class="author-contact my-3 text-center">
     <h1 class="muted">Contact Us</h1>
     <div class="authors muted">
-      <a href="http://linkedin.com/in/" class="muted">
-        <span>
-            <i class="bi bi-linkedin"></i>
-        </span> Raushan Pandit
+      <a href="http://linkedin.com/in/" class="text-muted">
+        Raushan Pandit
     </a>
-      <a href="http://linkedin.com/in/anuj-khadka">Anuj Khadka</a>
+    <span>|</span>
+      <a href="http://linkedin.com/in/anuj-khadka" class="text-muted">Anuj Khadka</a>
     </div>
   </div>
   <div class="contact row mt-5">
@@ -23,24 +22,24 @@
       />
     </div>
     <div class="contact-form col-lg-6 mb-5">
-      <form>
+      <form action="/contact" method="POST">
         <div class="mb-3">
           <!-- <label for="contactEmail" class="form-label">Email address</label> -->
           <input
             type="email"
             class="form-control"
             id="contactEmail"
-            name="contact_email"
+            name="contact-email"
             placeholder="Enter your email"
           />
         </div>
         <div class="mb-3">
           <!-- <label for="contactName" class="form-label">Full Name:</label> -->
           <input
-            type="email"
+            type="text"
             class="form-control"
             id="contactName"
-            name="contact_name"
+            name="contact-name"
             placeholder="Enter your full name"
           />
         </div>
@@ -50,7 +49,7 @@
           <textarea
             class="form-control"
             id="contactMessage"
-            name="contact_message"
+            name="contact-message"
             placeholder="Enter your message"
             rows="3"
           ></textarea>
