update book resource

--- a/memorivise/templates/base.html
+++ b/memorivise/templates/base.html
@@ -52,7 +52,7 @@
                 <li><a class="dropdown-item" href="#">Doubts</a></li>
                 <li><hr class="dropdown-divider" /></li>
                 <li>
-                  <a class="dropdown-item" href="/memorivise/">Memorivise</a>
+                  <a class="dropdown-item" href="/memorivise">Memorivise</a>
                 </li>
                 <li><hr class="dropdown-divider" /></li>
                 <li>
