--- a/memorivise/templates/resources.html
+++ b/memorivise/templates/resources.html
@@ -15,7 +15,7 @@
   <hr>
   <div class="icon-container">
     <figure>
-      <a href="/Books"><img src="..\static\img\books\book icon.jpg"></a>
+      <a href="/books"><img src="..\static\img\books\book icon.jpg"></a>
       <figcaption><b>Books and Notes</b></figcaption>
     </figure>
     <figure>
