--- a/memorivise/templates/books.html
+++ b/memorivise/templates/books.html
@@ -53,13 +53,12 @@
             <figcaption class="my-2"><b>Physics Olympiad</b></figcaption>
         </figure>
         <figure>
-            <a href="..\static\book\University Physics with Modern Physics (14th edition) [Dr.Soc].pdf"><img
+            <a href="/chemistry"><img
                     src="..\static\img\books\docccc.jpg"></a>
             <figcaption class="my-2"><b>Chemistrty Olympiad</b></figcaption>
         </figure>
         <figure>
-            <a href="..\static\book\University Physics with Modern Physics (14th edition) [Dr.Soc].pdf"><img
-                    src="..\static\img\books\docccc.jpg"></a>
+            <a href="/biology"><img src="..\static\img\books\docccc.jpg"></a>
             <figcaption class="my-2"><b>Biology Olympiad</b></figcaption>
         </figure>
         <figure>
